# LUToolsLite-Libruary

./: CMakeLists.txt  LICENSE  LUToolsLite.h  cube_loader.cpp  cube_loader.hpp  image_io.cpp  image_io.hpp  interpolator.hpp  lutools.cpp  readme.md  readme.txt
Example/: example_color.py  test_create_lut_gui.py
